conf/k8s_yaml/flannel/pod-myapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: dev
  labels:
    app: myapp
spec:
  containers:
  - name: myapp-pod
    image: ikubernetes/myapp:v7
    imagePullPolicy: IfNotPresent
