conf/k8s_yaml/flannel/pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: prod
  labels:
    app: nginx
spec:
  containers:
  - name: nginx-pod
    image: nginx:latest
    imagePullPolicy: IfNotPresent
