conf/k8s_yaml/flannel/nginx-allow.yaml
# 规则应用在prod名称空间中持有标签app=nginx的pod上
# 放行来自持有标签ns=dev的名称空间访问80端口的流量
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-allow
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - ports:
    - port: 80
  - from:
    - namespaceSelector:
         matchLabels:
           ns: dev
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
